cicd/k8s/ingress/unibooker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unibooker-ingress
  namespace: unibooker
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.unibooker.kro.kr
      secretName: unibooker-tls
  rules:
    - host: www.unibooker.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service-stable
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
